--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
           <div id='content'>
       <h1 id="paul-de-koning">Paul de Koning</h1>
 <p>I'm a software engineer from <strong>the Netherlands</strong> currently based in <strong>Dublin, Ireland</strong></p>
-<h4 id="experience">Experience</h4>
-<p>Since may 2023 I have been working at <strong>Salesforce</strong>  on an internal incident management solution with a broad impact on the company.<br />
-Prior to my current position, I completed temporary contract work at a Dutch company working on data mappers and finished two internships of six months each.</p>
+<p><strong>Contact</strong><br />
+For any inquiries you can contact me via e-mail on <strong>pauldekoning01@gmail.com</strong></p>
+<h3 id="experience">Experience</h3>
+<p>Since may 2023 I have been working at <strong>Salesforce</strong>  on an internal incident management solution with a broad impact on the company.</p>
+<p>Prior to my current position, I completed temporary contract work and finished two internships of six months each.</p>
 <p>For full work experience, you can open my <a href="https://www.linkedin.com/in/paul-de-koning-b9b68415b/">LinkedIn</a> page!</p>
-<h4 id="technologies">Technologies</h4>
+<h3 id="technologies">Technologies</h3>
 <p><strong>Languages</strong></p>
 <p><img src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" alt="" /> <img src="https://img.shields.io/badge/java-5283a2?style=for-the-badge" alt="" /></p>
 <p><strong>Frameworks</strong></p>
