Remove contact header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
           <div id='content'>
       <h1 id="paul-de-koning">Paul de Koning</h1>
 <p>I'm a software engineer from <strong>the Netherlands</strong> currently based in <strong>Dublin, Ireland</strong></p>
-<p><strong>Contact</strong><br />
-For any inquiries you can contact me via e-mail on <strong>pauldekoning01@gmail.com</strong></p>
+<p>For any inquiries you can contact me via e-mail on <strong>pauldekoning01@gmail.com</strong></p>
 <h3 id="experience">Experience</h3>
 <p>Since may 2023 I have been working at <strong>Salesforce</strong>  on an internal incident management solution with a broad impact on the company.</p>
 <p>Prior to my current position, I completed temporary contract work and finished two internships of six months each.</p>
